<resources>
    <string name="app_name">My Elephant</string>
    <string name="description">string</string>
    <string name="todo">todo</string>
    <string name="example_application">example_application</string>
    <string name="detail_description">detail description</string>
    <string name="detail_name">detail name</string>
    <string name="detail_id">detail_id</string>
    <string name="detail_index">detail_index</string>
    <string name="detail_affiliation">detail_affiliation</string>
    <string name="detail_species">detail_species</string>
    <string name="detail_sex">detail_sex</string>
    <string name="detail_fictional">detail_fictional</string>
    <string name="detail_dob">detail_dob</string>
    <string name="detail_dod">detail_dod</string>
    <string name="detail_wikilink">detail_wikilink</string>
    <string name="detail_note">detail_note</string>
</resources>
