<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C858B8B4"
    tools:context=".presentation.view.MainActivity">
    //tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-186dp" /


    <ImageView
        android:id="@+id/icon"
        android:layout_width="125dp"
        android:layout_height="224dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />


    <TextView
        android:id="@+id/detail_name"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/icon"
        android:layout_toRightOf="@id/icon"
        android:background="#57DDA3"
        android:ellipsize="start"
        android:filterTouchesWhenObscured="false"
        android:singleLine="true"
        android:text="@string/detail_name"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#EFEEE2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/detail_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_note"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/detail_wikilink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_fictional" />

    <TextView
        android:id="@+id/detail_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/detail_index"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/detail_affiliation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_affiliation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_affiliation"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <TextView
        android:id="@+id/detail_wikilink"
        android:layout_width="261dp"
        android:layout_height="39dp"
        android:layout_marginBottom="100dp"
        android:text="@string/detail_wikilink"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/detail_sex"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/detail_index"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/detail_fictional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/detail_fictional"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_affiliation"
        app:layout_constraintVertical_bias="0.959" />

    <TextView
        android:id="@+id/detail_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/detail_dob"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/detail_sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_dod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/detail_dod"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/detail_dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_species"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#EDEBE5"
        app:layout_constraintBottom_toTopOf="@+id/detail_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/detail_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/detail_id"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/detail_dod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>